<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/pturq">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/pturq">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="183dp"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"/>

    <RelativeLayout
        android:layout_below="@+id/logo"
        android:layout_marginTop="160dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:id="@+id/loginform"
        >

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:id="@+id/progress_circular"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="0dp"
            android:autofillHints="@string/email"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textColor="@color/txtclr"
            android:textSize="18sp" />


        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email"
            android:layout_margin="30dp"
            android:autofillHints="@string/password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="@color/txtclr"
            android:textSize="18sp" />

        <Button
            android:id="@+id/loginbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/loginbtn"
            android:onClick="signin"
            android:textColor="@color/white"
            android:textSize="18sp"/>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginbtn"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp">
            <!--<TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="9dp"
                android:textColor="@color/linkclr"
                android:id="@+id/forgotpass"
                android:text="@string/forgotpassword"
                android:visibility="invisible"
                />-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="5dp"
                android:id="@+id/regoptmsg"
                android:text="@string/registeroptmsg"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/regopt"
                android:layout_toEndOf="@+id/regoptmsg"
                android:text="@string/registeropt"
                android:textColor="@color/linkclr"
                android:textSize="16sp"
                android:onClick="register"/>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>
</ScrollView>