<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu"
    android:orientation="vertical"
    android:weightSum="2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="1">

        <LinearLayout
            android:clickable="true"
            android:focusable="true"
            android:onClick="enterstore"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@color/colorPrimaryDark">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/enterstore"
                    android:src="@drawable/shop"
                    />

                <TextView
                    android:layout_marginTop="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enterstore"
                    android:textColor="@color/white"
                    android:textSize="19sp"
                    android:layout_below="@+id/enterstore"
                    android:layout_centerHorizontal="true"/>

            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@color/pgrey"
            android:clickable="true"
            android:focusable="true"
            android:onClick="scanitem">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/scanproduct"
                    android:src="@drawable/scan"
                    />

                <TextView
                    android:layout_marginTop="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scanpro"
                    android:textColor="@color/white"
                    android:textSize="19sp"
                    android:layout_below="@+id/scanproduct"
                    android:layout_centerHorizontal="true"/>

            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="1">

        <LinearLayout
            android:clickable="true"
            android:focusable="true"
            android:onClick="accountdetails"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@color/pgrey">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/balancecheck"
                    android:src="@drawable/user"
                    />

                <TextView
                    android:layout_marginTop="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile"
                    android:textColor="@color/white"
                    android:textSize="19sp"
                    android:layout_below="@+id/balancecheck"
                    android:layout_centerHorizontal="true"/>

            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:clickable="true"
            android:focusable="true"
            android:onClick="topup"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@color/colorPrimaryDark">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/removeitem"
                    android:src="@drawable/logout"
                    />

                <TextView
                    android:layout_marginTop="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/logout"
                    android:textColor="@color/white"
                    android:textSize="19sp"
                    android:layout_below="@+id/removeitem"
                    android:layout_centerHorizontal="true"/>

            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>



</LinearLayout>